[package]
name = "bracket-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = { git = "https://github.com/amethyst/bracket-lib.git", features = ["serde"] }
specs = { version = "0.20.0", features = ["serde"] }
specs-derive = "0.4.1"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.117"
flate2 = "1.0"
web-sys = { version="0.3.69", features = ["Storage", "Window"] }

[profile.dev.package.flate2]
opt-level = 3
